--- a/index.html
+++ b/index.html
@@ -79,12 +79,7 @@
           <h2>About</h2>
           <h3>Hey there, I'm Lénia Amaral!</h3>
           <h4>Scientist by Day, Plant Enthusiast by Heart, Foodie by Passion, and Traveler by Soul</h4>
-          <p>
-            My research focuses on brain organization and neuroplasticity. I have been studying the neural organization of conceptual knowledge and how network activity influences this neural processing. I am also interested in exploring how neuroplasticity shapes cognitive systems (e.g., through deafness, blindness, or aging). To address these issues, I employ a multimodal strategy that includes fMRI, EEG, neuromodulation, neuropsychological and behavioral data. 
-            <i class='bx bx-leaf' ></i>
-            <i class='bx bx-bowl-hot'></i>
-            <i class='bx bxs-plane-alt' ></i>
-          </p>
+         
         </div>
 
         <div class="row">
@@ -94,18 +89,18 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Cognitive Neuroscientist.</h3>
             <p class="fst-italic">
-              My primary focus lies in the field of neuroscience, which encompasses a wide range of intriguing areas like neuroimaging, neurocognition, neuromodulation, neuropsychology, and neuroplasticity. This diverse interest not only guides my academic pursuits but also motivates me to contribute meaningfully to the constantly evolving landscape of neuroscientific research.
+              My research focuses on brain organization and neuroplasticity. I have been studying the neural organization of conceptual knowledge and how network activity influences this neural processing. I am also interested in exploring how neuroplasticity shapes cognitive systems (e.g., through deafness, blindness, or aging). To address these issues, I employ a multimodal strategy that includes fMRI, EEG, neuromodulation, neuropsychological and behavioral data. 
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>PhD</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Coimbra, PortugalA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Coimbra, Portugal</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Position:</strong> <span>Postdoctoral Researcher</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Position:</strong> <span>Invited Professor and Researcher</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>University of Coimbra</span></li>
                 </ul>
               </div>
@@ -297,9 +292,9 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Postdoctoral researcher</h4>
+              <h4>Invited Professor and Researcher</h4>
               <h5>2024 - Present</h5>
-              <p><em>Invited Professor and Researcher. Faculty of Psychology and Educational Sciences, University of Coimbra. Portugal</em></p>
+              <p><em>Invited Professor and Researcher at the Faculty of Psychology and Educational Sciences, University of Coimbra. Portugal</em></p>
             </div>
             <div class="resume-item">
               <h4>Postdoctoral researcher</h4>
